Unfinished massive rewrite of ReS internals.